Remove Guava collections from `obo.mpo`